# macro-lens

./: .gitignore  README.md  docker-compose.yml  signals.yaml
.claude/: launch.json
.devcontainer/: devcontainer.json  setup.sh
backend/: .env.example  Dockerfile  cron.py  pyproject.toml  requirements.txt
backend/alerts/: dispatcher.py
backend/api/: main.py
backend/db/: database.py  models.py
backend/fetchers/: fred.py  news.py  worldbank.py
backend/signals/: engine.py  registry.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CommodityHeatmap.tsx  CountryTable.tsx  EventsCalendar.tsx  FOMCAnalysis.tsx  IndicatorCard.tsx  InflationNowcast.tsx  NewsFeed.tsx  RegimeQuadrant.tsx  SignalFeed.tsx  YieldCurveChart.tsx
frontend/lib/: api.ts
